common/force-app/main/default/objects/Marketing_Preference__c/Marketing_Preference__c.object-meta.xml
<CustomObject>
    <label>Marketing Preference</label>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Marketing Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>