common/force-app/main/default/objects/Marketing_Preference__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Preferences</relationshipLabel>
    <relationshipName>Marketing_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>