common/force-app/main/default/objects/Marketing_Preference__c/fields/Account_Record_type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_type__c</fullName>
    <formula>Account__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record type</label>
    <type>Text</type>
</CustomField>