common/force-app/main/default/objects/Marketing_Preference__c/fields/Investor_Updates_OptIn__c.field-meta.xml
<CustomField>
    <fullName>Investor_Updates_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor_Updates_OptIn</label>
    <type>Checkbox</type>
</CustomField>