common/force-app/main/default/objects/Marketing_Preference__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Preferences</relationshipLabel>
    <relationshipName>Marketing_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>