common/force-app/main/default/objects/Marketing_Preference__c/fields/Lead_Record_type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_type__c</fullName>
    <formula>Lead__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Record type</label>
    <type>Text</type>
</CustomField>