common/force-app/main/default/objects/Marketing_Preference__c/fields/Marketing_Preference_ID__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Preference_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Preference ID</label>
    <type>Text</type>
</CustomField>