common/force-app/main/default/objects/Marketing_Preference__c/fields/Marketing_Updates_About_Product_OptIn__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Updates_About_Product_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing_Updates_About_Product_OptIn</label>
    <type>Checkbox</type>
</CustomField>