common/force-app/main/default/objects/Marketing_Preference__c/fields/Regular_Marketing_Communications_Optout__c.field-meta.xml
<CustomField>
    <fullName>Regular_Marketing_Communications_Optout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regular_Marketing_Communications_Optout</label>
    <type>Checkbox</type>
</CustomField>