common/force-app/main/default/objects/Marketing_Preference__c/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <formula>Lead__r.Web_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Source</label>
    <type>Text</type>
</CustomField>